--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "jest": "^22.1.4",
     "json-server": "^0.12.1",
@@ -22,6 +23,7 @@
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.7",
     "@types/express": "^4.11.0",
     "@types/jest": "^22.1.0",
     "@types/lodash": "^4.14.96",
